--- a/src/qt/forms/multisiginputentry.ui
+++ b/src/qt/forms/multisiginputentry.ui
@@ -45,8 +45,8 @@
               </property>
               <property name="icon">
                 <iconset resource="../silk.qrc">
-                  <normaloff>:/icons/editpaste</normaloff>
-                  :/icons/editpaste
+                  <normaloff>:/icons/drk/editpaste</normaloff>
+                  :/icons/drk/editpaste
                 </iconset>
               </property>
               <property name="shortcut">
@@ -64,8 +64,8 @@
               </property>
               <property name="icon">
                 <iconset resource="../silk.qrc">
-                  <normaloff>:/icons/remove</normaloff>
-                  :/icons/remove
+                  <normaloff>:/icons/drk/remove</normaloff>
+                  :/icons/drk/remove
                 </iconset>
               </property>
             </widget>
@@ -136,8 +136,8 @@
               </property>
               <property name="icon">
                 <iconset resource="../silk.qrc">
-                  <normaloff>:/icons/editpaste</normaloff>
-                  :/icons/editpaste
+                  <normaloff>:/icons/drk/editpaste</normaloff>
+                  :/icons/drk/editpaste
                 </iconset>
               </property>
               <property name="shortcut">
