--- a/src/qt/forms/stormnodelist.ui
+++ b/src/qt/forms/stormnodelist.ui
@@ -80,7 +80,7 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
                </property>
                <property name="text">
-                <string>Note: Status of your stormnodes in local wallet can potentially be slightly incorrect.&lt;br /&gt;Always wait for wallet to sync additional data and then double check from another node&lt;br /&gt;if your node should be running but you still see &quot;MISSING&quot; in &quot;Status&quot; field.</string>
+                <string>Note: Status of your Stormnodes in local wallet can potentially be slightly incorrect.&lt;br /&gt;Always wait for wallet to sync additional data and then double check from another node&lt;br /&gt;if your node should be running but you still see &quot;MISSING&quot; in &quot;Status&quot; field.</string>
                </property>
               </widget>
              </item>
@@ -461,7 +461,7 @@ background-color: rgb(0, 0, 0);
            <item>
             <widget class="QLineEdit" name="filterLineEdit">
              <property name="toolTip">
-              <string>Filter stormnode list</string>
+              <string>Filter Stormnode list</string>
              </property>
              <property name="styleSheet">
               <string notr="true">color: rgb(0, 0, 0);
