--- a/src/qt/forms/privatesendconfig.ui
+++ b/src/qt/forms/privatesendconfig.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SandstormConfig</class>
- <widget class="QDialog" name="SandstormConfig">
+ <class>PrivatesendConfig</class>
+ <widget class="QDialog" name="PrivatesendConfig">
   <property name="geometry">
    <rect>
     <x>0</x>
