fixing strings and docs

--- a/src/qt/forms/stormnodelist.ui
+++ b/src/qt/forms/stormnodelist.ui
@@ -80,7 +80,7 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
                </property>
                <property name="text">
-                <string>Note: Status of your Stormnodes in local wallet can potentially be slightly incorrect.&lt;br /&gt;Always wait for wallet to sync additional data and then double check from another node&lt;br /&gt;if your node should be running but you still see &quot;MISSING&quot; in &quot;Status&quot; field.</string>
+                <string>Note: Status of your Stormnodes in local wallet can potentially be slightly incorrect.&lt;br /&gt;Always wait for wallet to sync additional data and then double check from another node&lt;br /&gt;if your Stormnode should be running but you still do not see "ENABLED" in "Status" field.</string>
                </property>
               </widget>
              </item>
@@ -148,7 +148,7 @@ background-color:(255,255,255);</string>
              </column>
              <column>
               <property name="text">
-               <string>Pubkey</string>
+               <string>Payee</string>
               </property>
              </column>
             </widget>
@@ -436,7 +436,7 @@ background-color:(255,255,255);</string>
            </column>
            <column>
             <property name="text">
-             <string>Pubkey</string>
+             <string>Payee</string>
             </property>
            </column>
           </widget>
